--- a/index.html
+++ b/index.html
@@ -227,7 +227,7 @@
                 <img src="img/Carrossel/Imagem Alunos Josival Penha 2.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 2" width="100%" height="500px">
             </div>
             <div class="carousel-item" data-bs-interval="4000">
-                <img src="img/Carrossel/Imagem Alunos Josival Penha 3.png" class="d-block w-100" alt="Imagem Alunos Josival Penha 3" width="100%" height="500px">
+                <img src="img/Carrossel/Imagem Alunos Josival Penha 3.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 3" width="100%" height="500px">
             </div>
             <div class="carousel-item" data-bs-interval="4000">
                 <img src="img/Carrossel/Imagem Alunos Josival Penha 4.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 4" width="100%" height="500px">
