--- a/index.html
+++ b/index.html
@@ -223,16 +223,16 @@
    <div id="carouselExampleControls" class="carousel slide row" data-bs-ride="carousel">
         <div class="carousel-inner">
             <div class="carousel-item active" data-bs-interval="4000">
-                <img src="img/Carrossel/Imagem Alunos Josival Penha 1.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 1" width="100%" height="500px">
+                <img src="img/Carrossel/Imagem Alunos Josival Penha 1.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 1" width="100%" height="500px" loading="lazy">
             </div>
             <div class="carousel-item" data-bs-interval="4000">
-                <img src="img/Carrossel/Imagem Alunos Josival Penha 2.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 2" width="100%" height="500px">
+                <img src="img/Carrossel/Imagem Alunos Josival Penha 2.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 2" width="100%" height="500px" loading="lazy">
             </div>
             <div class="carousel-item" data-bs-interval="4000">
-                <img src="img/Carrossel/Imagem Alunos Josival Penha 3.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 3" width="100%" height="500px">
+                <img src="img/Carrossel/Imagem Alunos Josival Penha 3.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 3" width="100%" height="500px" loading="lazy">
             </div>
             <div class="carousel-item" data-bs-interval="4000">
-                <img src="img/Carrossel/Imagem Alunos Josival Penha 4.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 4" width="100%" height="500px">
+                <img src="img/Carrossel/Imagem Alunos Josival Penha 4.jpg" class="d-block w-100" alt="Imagem Alunos Josival Penha 4" width="100%" height="500px" loading="lazy">
             </div>
         </div>
         <button class="carousel-control-prev" type="button" data-bs-target="#carouselExampleControls" data-bs-slide="prev">
@@ -259,14 +259,14 @@
     <div class="row campo-loca-tel">
         <div class="col loca">
             <div class="row svg-txt">
-                <img src="img/ícones/location-png.png" alt="Ícone de localização">
+                <img src="img/ícones/location-png.png" alt="Ícone de localização" loading="lazy">
                 <h1>Endereço</h1>
                 <h6>Av. João Paulo II, 894 - Mirueira, Paulista - PE</h6>
             </div>
         </div>
         <div class="col tel">
             <div class="row svg-txt">
-                <img src="img/ícones/fone-png.png" alt="Ícone de telefone">
+                <img src="img/ícones/fone-png.png" alt="Ícone de telefone" loading="lazy">
                 <h1>Telefone</h1>
                 <h6>81 3437-2618</h6>
                 <h6>81 99499-7501</h6>
