--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta http-equiv="X-UA-Compatible" content="IE=edge">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>Instituto Educacional Josival Penha - Escola em Mirueira</title>
+    <link rel="canonical" href="https://josivalpenha.com"/>
     <meta name="author" content="Instituto Educacional Josival Penha - Paulista">
     <meta name="creator" content="Instituto Educacional Josival Penha - Paulista">
     <meta name="publisher" content="Instituto Educacional Josival Penha - Paulista">
