Mudando urls antigas para a novas urls

--- a/index.html
+++ b/index.html
@@ -99,7 +99,7 @@
                     <input type="text" placeholder="Nome da criança" class="campo campo-top" id="nomeCri" name="$nomeCri" required>
                     <input type="tel" placeholder="Telefone" class="campo campo-top" id="telefone" name="$telefone" required>
                     <input type="email" placeholder="E-mail" class="campo campo-top" id="email" name="$email">
-                    <input type="hidden" name="redirectTo" value="https://josivalpenha.site/?formPc">
+                    <input type="hidden" name="redirectTo" value="https://josivalpenha.com/?formPc">
                 </div>
                 <button class="btn btn-form">Envie agora</button>
             </form>
@@ -133,7 +133,7 @@
                     <input type="text" placeholder="Nome da criança" class="campo campo-top nomeCri-mobile" id="nomeCri" name="$nomeCri" required>
                     <input type="tel" placeholder="Telefone" class="campo campo-top telefone-mobile" id="telefone" name="$telefone" required>
                     <input type="email" placeholder="E-mail" class="campo campo-top email-mobile" id="email" name="$email">
-                    <input type="hidden" name="redirectTo" value="https://josivalpenha.site/?formMobile">
+                    <input type="hidden" name="redirectTo" value="https://josivalpenha.com/?formMobile">
                 </div>
                 <button class="btn btn-form" type="submit">Envie agora</button>
             </form>
@@ -292,7 +292,7 @@
            }
        }, 1);
        function clickBtnEnvi() {
-        window.document.location.replace('https://josivalpenha.site')
+        window.document.location.replace('https://josivalpenha.com')
        }
        if (window.location.search.replace('?', '') == 'formMobile') {
         window.document.getElementsByClassName('central-form-envi-pc')[0].style.display = 'block'
