--- a/404.html
+++ b/404.html
@@ -69,19 +69,12 @@
     </style>
 </head>
 <body>
-    <img src="img/Logos/Logo Josival Penha.png" alt="Logo Josival Penha" width="30%" class="logo-jp" id="logo-jp">
+    <img src="img/Logo Josival Penha.png" alt="Logo Josival Penha" width="30%" class="logo-jp" id="logo-jp">
     <section class="principal">
         <div class="msg-404-1" id="msg-404-1">Você se Perdeu?</div>
         <div class="msg-sub-404-1" id="msg-sub-404-1">Não conseguimos encontrar essa página. <br> Você pode encontrar mais informações na <br> página inicial</div>
         <a href="/" class="bt-voltar" id="bt-voltar" rel="next">Ir para a página inicial</a>
         <div class="msg-404-2" id="msg-404-2">Código de Erro: <span class="txt-404" id="txt-404">404</span></div>
     </section>
-    <script>
-        if( /Android|webOS|iPhone|iPad|iPod|BlackBerry|IEMobile|Opera Mini/i.test(navigator.userAgent)||window.innerWidth<=740) {
-
-        }else{
-
-        }
-    </script>
 </body>
 </html>
